--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon//favicon-16x16.png" />
+    <link rel="manifest" href="./favicon//site.webmanifest" />
     <title>Download</title>
   </head>
   <body>
@@ -24,7 +28,12 @@
           Version: 1.0.1 FROM
           <a rel="noopener" href="https://donexa.org" target="_blank">DONEXA</a>
         </p>
-        <a class="a-clickable" href="https://dpictures.s3.amazonaws.com/pv-d/OpenCarenet-Burundi-v1.json" download="OpenCarenet-CHE">Télécharger OpenCarenet CHE</a>
+        <a
+          class="a-clickable"
+          href="https://dpictures.s3.amazonaws.com/pv-d/OpenCarenet-Burundi-v1.json"
+          download="OpenCarenet-CHE"
+          >Télécharger OpenCarenet CHE</a
+        >
       </div>
     </div>
     <div class="latest-news">
@@ -48,7 +57,9 @@
           Nous serions très reconnaissants si vous nous communiquiez vos
           commentaires par e-mail.
         </p>
-        <a class="a-clickable" href="mailto:info.donexa@gmail.com">Envoyez-nous un e-mail</a>
+        <a class="a-clickable" href="mailto:info.donexa@gmail.com"
+          >Envoyez-nous un e-mail</a
+        >
       </div>
     </div>
   </body>
