--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </p>
         <a
           class="a-clickable"
-          href="https://dpictures.s3.amazonaws.com/pv-d/OpenCarenet-Burundi-v1.json"
+          href="https://dpictures.s3.amazonaws.com/pv-d/app-release.apk"
           download="OpenCarenet-CHE"
           >Télécharger OpenCarenet CHE</a
         >
